sort of fixed the images with subtext - still not centered

--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ p {
     font-weight: 200;
     background-color: #e5e7eb;
     padding: 50px 130px 50px 130px;
+    margin-top: 50px;
 }
 
 #strong {
@@ -101,30 +102,37 @@ button {
 h2 {
     display: flex;
     justify-content: center;
+    padding-top: 25px;
+    padding-bottom: 25px;
 }
 
 .image {
     border-radius: 10px;
     border: 2px solid #1179f5;
-    width: 130px;
-    height: 130px;
+    width: 180px;
+    height: 180px;
     display: flex;
     justify-content: center;
     flex-shrink: 0;
+    vertical-align: top;
+    padding-bottom: 0px;
   }
-
-.text {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 50px;
-}
 
 .content {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 30px;
+    gap: 20px;
+    text-align: center;
+    flex-shrink: 1;
+}
+
+.block {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 0px;
 }
 
 .bottom {
